--- a/index.html
+++ b/index.html
@@ -1432,13 +1432,13 @@ const BANK_IMPROVE={
 
 /* مستويات التقدير العام (لصف التقدير أسفل الجدول) */
 const GENERAL_LEVELS = [
-  {min:90, max:100, desc:"مثالي", label:"5", cls:"lv5"},
-  {min:80, max:89.999, desc:"يتخطى التوقعات", label:"4", cls:"lv4"},
-  {min:70, max:79.999, desc:"يوافق التوقعات", label:"3", cls:"lv3"},
-  {min:60, max:69.999, desc:"بحاجة إلى تطوير", label:"2", cls:"lv2"},
-  {min:0,  max:59.999, desc:"غير مرضي", label:"1", cls:"lv1"}
+  { min: 4.5, max: 5.01, desc: "مثالي", label: "5", cls: "lv5" },
+  { min: 3.5, max: 4.5,  desc: "يتخطى التوقعات", label: "4", cls: "lv4" },
+  { min: 2.5, max: 3.5,  desc: "يوافق التوقعات", label: "3", cls: "lv3" },
+  { min: 1.5, max: 2.5,  desc: "بحاجة إلى تطوير", label: "2", cls: "lv2" },
+  { min: 0,   max: 1.5,  desc: "غير مرضي", label: "1", cls: "lv1" }
 ];
-
+  
 /* تتبّع التحرير اليدوي */
 let editedStrengths=false, editedImproves=false;
 $('#strengths').addEventListener('input',()=>{editedStrengths=true; snap();});
@@ -1547,37 +1547,59 @@ function recalc(){
   $('#kR').textContent=`مجموع الأوزان: ${ws}%`;
   $('#sigT').textContent=$('#tName').value||'—';
 
-  /* صف مستوى التقدير العام للأداء */
-  const pill = $('#overallPill');
+  function updateOverallLevel(total, avg, strengths, improves, editedStrengths, editedImproves) {
+
+  const pill = document.querySelector('#overallPill');
   const clsList = ['lv1','lv2','lv3','lv4','lv5'];
-  clsList.forEach(c=>pill.classList.remove(c));
 
-  let level = GENERAL_LEVELS.find(l=> total>=l.min && total<=l.max);
-  if(!level && total>0){ level = GENERAL_LEVELS[GENERAL_LEVELS.length-1]; }
+  // إزالة جميع الكلاسات السابقة
+  clsList.forEach(c => pill.classList.remove(c));
 
-  if(level){
+  // تحديد المستوى المناسب (من 0 - 5)
+  let level = GENERAL_LEVELS.find(l =>
+    total >= l.min && total < l.max
+  );
+
+  if (!level) {
+    level = GENERAL_LEVELS[GENERAL_LEVELS.length - 1];
+  }
+
+  if (level) {
     pill.classList.add(level.cls);
-    $('#overallClass').textContent = level.label;
-    $('#overallDesc').textContent  = 'مستوى التقدير العام للأداء — ' + level.desc;
-  }else{
-    $('#overallClass').textContent = '—';
-    $('#overallDesc').textContent  = 'مستوى التقدير العام للأداء';
+    document.querySelector('#overallClass').textContent = level.label;
+    document.querySelector('#overallDesc').textContent =
+      'مستوى التقدير العام للأداء — ' + level.desc;
+  } else {
+    document.querySelector('#overallClass').textContent = '—';
+    document.querySelector('#overallDesc').textContent =
+      'مستوى التقدير العام للأداء';
   }
-  $('#overallPercent').textContent = 'الدرجة النسبية: ' + total.toFixed(0) + '%';
-  $('#overallAvg').textContent     = 'متوسط ' + avg.toFixed(2) + ' / 5';
 
-  if(!editedStrengths){
+  // ✅ عرض الدرجة من 5 بدل النسبة
+  document.querySelector('#overallPercent').textContent =
+    'الدرجة: ' + total.toFixed(2) + ' / 5';
+
+  document.querySelector('#overallAvg').textContent =
+    'متوسط ' + avg.toFixed(2) + ' / 5';
+
+  // نقاط القوة
+  if (!editedStrengths) {
     const s = joinSlashLine(strengths);
-    $('#strengths').textContent = s || (cleanText($('#strengths').textContent)||'—');
+    const el = document.querySelector('#strengths');
+    el.textContent = s || (cleanText(el.textContent) || '—');
   }
 
-  const currentImp = cleanText($('#improves').textContent);
-  const sourceList = (editedImproves && currentImp && currentImp!=='—')
+  // فرص التحسين
+  const currentImp = cleanText(document.querySelector('#improves').textContent);
+  const sourceList = (editedImproves && currentImp && currentImp !== '—')
     ? [currentImp, ...improves]
     : improves;
+
   const mergedImp = joinSlashLine(sourceList);
-  $('#improves').textContent = mergedImp || (currentImp || '—');
+  document.querySelector('#improves').textContent =
+    mergedImp || (currentImp || '—');
 }
+
 
 /* حفظ لقطة */
 function snap(){
