--- a/index.html
+++ b/index.html
@@ -514,7 +514,8 @@ tr.r1{background:linear-gradient(90deg,#fee2e2 0,#fff 60%)} tr.r2{background:lin
         <button class="pen noprint" id="editDir" title="تعديل">✎</button>
       </div>
       <div class="line">
-        <span id="schTxt"> أبي بن ثابت الابتدائية</span>
+        <span id="schTxt"> اسم المدرسة هنا</span>
+        <button class="pen noprint" id="editSch" title="تعديل">✎</button>
       </div>
     </div>
     <img id="moe" alt="وزارة التعليم" src="وزارة التعليم.png">
@@ -631,7 +632,7 @@ tr.r1{background:linear-gradient(90deg,#fee2e2 0,#fff 60%)} tr.r2{background:lin
   <!-- توقيعات -->
   <section class="signs">
     <div class="sig"><div id="sigT" class="sig-name">—</div><div class="sig-line"></div><div style="font-size:12px;color:#667">توقيع الموظف</div></div>
-    <div class="sig"><div class="sig-name" id="sigP">عبدالهادي بن غويزي المطيري</div><div class="sig-line"></div><div style="font-size:12px;color:#667">توقيع المدير المباشر</div></div>
+    <div class="sig"><div class="sig-name" id="sigP">اسم مدير المدرسة هنا</div><div class="sig-line"></div><div style="font-size:12px;color:#667">توقيع المدير المباشر</div></div>
   </section>
 
   <div class="footer" data-hide-on-print>تنفيذ وتصميم: فهد حامد الزهراني</div>
