--- a/index.html
+++ b/index.html
@@ -514,8 +514,7 @@ tr.r1{background:linear-gradient(90deg,#fee2e2 0,#fff 60%)} tr.r2{background:lin
         <button class="pen noprint" id="editDir" title="تعديل">✎</button>
       </div>
       <div class="line">
-        <span id="schTxt"> اسم المدرسة هنا</span>
-        <button class="pen noprint" id="editSch" title="تعديل">✎</button>
+        <span id="schTxt"> أبي بن ثابت الابتدائية</span>
       </div>
     </div>
     <img id="moe" alt="وزارة التعليم" src="وزارة التعليم.png">
@@ -746,7 +745,6 @@ const K_PEOPLE='PF_people'; // عدسة الأسماء
   if(schSaved) $('#schTxt').textContent=schSaved;
 
   $('#editDir').onclick=()=>{const v=prompt('الإدارة التعليمية', $('#dirTxt').textContent.trim()); if(v!==null){$('#dirTxt').textContent=(v.trim()||'—'); localStorage.setItem(K_DIR,$('#dirTxt').textContent); snap();}};
-  $('#editSch').onclick=()=>{const v=prompt('اسم المدرسة', $('#schTxt').textContent.trim()); if(v!==null){$('#schTxt').textContent=(v.trim()||'—'); localStorage.setItem(K_SCH,$('#schTxt').textContent); snap();}};
 })();
 
 /* توقيع المدير */
