--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ tr.r1{background:linear-gradient(90deg,#fee2e2 0,#fff 60%)} tr.r2{background:lin
   <!-- توقيعات -->
   <section class="signs">
     <div class="sig"><div id="sigT" class="sig-name">—</div><div class="sig-line"></div><div style="font-size:12px;color:#667">توقيع الموظف</div></div>
-    <div class="sig"><div class="sig-name" id="sigP">اسم مدير المدرسة هنا</div><div class="sig-line"></div><div style="font-size:12px;color:#667">توقيع المدير المباشر</div></div>
+    <div class="sig"><div class="sig-name" id="sigP">عبدالهادي بن غويزي المطيري</div><div class="sig-line"></div><div style="font-size:12px;color:#667">توقيع المدير المباشر</div></div>
   </section>
 
   <div class="footer" data-hide-on-print>تنفيذ وتصميم: فهد حامد الزهراني</div>
